member 커밋(중간 1차 발표)

--- a/babmukja/src/main/webapp/resources/css/member/emailform.css
+++ b/babmukja/src/main/webapp/resources/css/member/emailform.css
@@ -3,8 +3,13 @@
     width: 1200px;
     margin: 0 auto;
     text-align: center;
+    margin-top : 230px;
 }
 .email__form-text {
     font-weight: bold;
-    font-size: 35px;
+    font-size: 30px;
+    color: rgb(81,81,81);
+}
+.email__send {
+	margin-bottom: 10px;
 }
