--- a/babmukja/src/main/webapp/resources/css/member/emailcheck.css
+++ b/babmukja/src/main/webapp/resources/css/member/emailcheck.css
@@ -3,11 +3,13 @@
     width: 1200px;
     margin: 0 auto;
     text-align: center;
+    margin-top : 230px;
 }
 .email_check_text {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 50px;
+    color: rgb(81,81,81);
 }
 .email_button {
     display: flex;
