--- a/babmukja/src/main/webapp/resources/css/store/detailpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/detailpb.css
@@ -315,10 +315,11 @@
 }
 
 #pb_review_select_img img {
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     border-radius: 5px;
 }
+
 
 #pb_review_inquire_header {
     display: flex;
