recipe 수정 커밋(중간 1차 발표)

--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -327,9 +327,12 @@ html, body {
 	margin-left : 25px;
 }
 .recipe-pic-box img{ 
-    width: 97%;
+    width: 96%;
+    height:200px;
+    overflow:hidden; 
     margin-top: 15px;
-    margin-left: 3px;
+    margin-left: 5px;
+    
 }
 .recipe-info{
     display: flex;
