--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -165,12 +165,14 @@
     margin-bottom: 15px;
     padding-bottom: 5px;
 }
-#post-info > div:nth-child(1){
+.keyword-wrapper{
     color: white;
     background : #7db341;
     border-radius: 7px;
     padding-left : 5px;
     padding-right: 5px;
+    margin-right: 3px;
+    float:left;
 }
 #post-container{
     margin-bottom:15px;
