--- a/babmukja/src/main/webapp/resources/css/meetup/meetup-detail.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/meetup-detail.css
@@ -15,6 +15,8 @@
 	width: 560px;
 	height: 400px;
 	margin-right: 60px;
+	font-family: 'Dokdo', cursive;
+	
 	;
 }
 
@@ -144,7 +146,8 @@
 }
 
 .tag {
-	font-size: 20px;
+	font-family: 'East Sea Dokdo', cursive;
+	font-size: 30px;
 	margin-top: 50px;
 }
 
