--- a/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipemain.css
@@ -269,7 +269,7 @@ html, body {
 
 #sector3{
     width: 1300px;
-    background:url(../../images/background.jpg) no-repeat;
+    background:url(../../images/marble.jpg) no-repeat;
     background-size: cover;
     height: 1400px;
     display: grid;
@@ -453,4 +453,31 @@ html, body {
     background-image:linear-gradient(right, #fff 95%, #aaa 100%);
 }
 
+#sector3-mid{
+	width: 100%;
+	height: 500px;
+	background-image : url(../../images/sector3.jpg);
+}
+#writeform-button{
+	position: absolute;
+	top:64%;
+	margin: 0 auto;
+	display: inline-block;
+	width: 240px;
+	height: 50px;
+	border : 2px solid white;
+	background-color : rgba(255,255,255,0);
+	padding: 10px;
+	font-size : 16px;
+	color: white;
+	z-index : 100;
+	text-align : center;
+	opacity: 0.8;
+	transition: .4s;
+	cursor: pointer;
+}
+#writeform-button:hover{ 
+	opacity: 1;
+	box-shadow : 0 0 15px 3px white;
+}
 
