menubar 수정 : swiper 위에서 투명

--- a/babmukja/src/main/webapp/resources/css/menubar2.css
+++ b/babmukja/src/main/webapp/resources/css/menubar2.css
@@ -4,6 +4,7 @@
     top:0;
     left : 0;
     width: 100%;
+    background : rgba(0,0,0,0);
     margin: 0 auto;
     padding : 0;
     transition: .2s;
@@ -21,6 +22,7 @@ ul,ol{
 }
 #menuContent a{
     text-decoration: none;
+    color: rgb(81,81,81);
 }
 #menuContent a:visited{
     text-decoration: none;
@@ -68,6 +70,9 @@ ul,ol{
 #sign>a:first{
     border-right: 1px solid #7db341 ;
 }
+#sign>i{
+    color: #7db341 !important;
+}
 .optionalMenubar{
     position: absolute;
     width: 100%;
@@ -84,6 +89,7 @@ ul,ol{
 }
 a{
     text-decoration: none !important;
+    color: rgb(81,81,81) !important;
 }
 a:visited{
     text-decoration: none !important;
@@ -106,22 +112,4 @@ a:hover{
 }
 #nickName {
 	margin-rigth: 10px;
-}
-.opacity{
-	background : rgba(0,0,0,0);
-}
-.opacity a{
-	color: white;
-}
-.opacity i{
-	color: white;
-}
-.non-opacity{
-	background : white;
-}
-.non-opacity a{
-	color: rgb(81,81,81);	
-}
-.non-opacity i{
-	color: #7db341;	
 }
