레시피 카테고리 별 목록 불러오기 추가 + 댓글 별점

--- a/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
@@ -10,12 +10,10 @@ a {
 .container {
     width: 1200px;
     margin: 0 auto;
+    margin-top : 80px;
+    height : auto;
 }
-.text {
-    font-size: 30px;
-    height: 100px;
-    font-weight: bold;
-}
+
 hr {
     border : 1px solid gainsboro;
 }
@@ -38,7 +36,7 @@ hr {
     text-align: center;
     padding-right: 55px;
 }
-.icon {
+.searchicon {
     width: 40px; height: 40px;
     position:relative;
     left:-120px;
@@ -82,18 +80,6 @@ hr {
 }
 .select > button:focus {
     outline: none;
-}
-.write {
-    height: 50px;            
-    text-align: right;
-}
-#write {            
-    width: 80px; height: 50px;
-    border: none;    
-    border-radius: 5px;        
-    background: #7db341;  
-    color:white;
-    cursor: pointer;
 }
 .ca-list {
     margin-top: 50px;
