--- a/babmukja/src/main/webapp/resources/css/member/style.css
+++ b/babmukja/src/main/webapp/resources/css/member/style.css
@@ -6,3 +6,6 @@
 @import "searchpass.css";
 @import "resetpass.css";
 @import "searchid.css";
+@import "socialsignupform.css";
+@import "membermodify.css";
+@import "changepass.css";
