--- a/babmukja/src/main/webapp/resources/css/meetup/meetup_afterSearch.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/meetup_afterSearch.css
@@ -1,3 +1,4 @@
+
 .main_container {
 
     width: 1200px;
@@ -365,12 +366,11 @@
 
 
 .info_block_container {
-    top:100px;
-    margin-top: 15px;
-    position: relative;
+    margin-top: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 16px;
+    grid-row-gap: 20px;
     width: 1200px;
 }
 
