정래 페이징 처

--- a/babmukja/src/main/webapp/resources/css/meetup/meetup_afterSearch.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/meetup_afterSearch.css
@@ -742,3 +742,9 @@ width: 70px;
     transition: all .2s ease;
   }
   
+  .paging{
+  margin: 0 auto;
+  margin-top:30px;
+  text-align: center;
+  }
+  
