--- a/babmukja/src/main/webapp/resources/css/menubar.css
+++ b/babmukja/src/main/webapp/resources/css/menubar.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 #menubarContainer{
     position : fixed;
     top:0;
@@ -18,6 +19,7 @@ ul,ol{
 
 #menuContent>ul {
     list-style: none ;
+    font-family: 'Nanum Gothic', sans-serif;	
 }
 #menuContent a{
     text-decoration: none;
@@ -60,6 +62,7 @@ ul,ol{
     right: 20px;
     height : 100%;
     padding-top: 5px;
+	font-family: 'Nanum Gothic', sans-serif;
 }
 #sign>a{
     line-height: 50px ;
@@ -73,9 +76,10 @@ ul,ol{
     width: 100%;
     top:-300px;
     height: 60px;
-    border : 1px solid gainsboro;
+    border-bottom : 1px solid gainsboro;
     background: white;
     margin: 0 auto;
+	font-family: 'Nanum Gothic', sans-serif;
 }
 .optionalMenubar ul {
     position: absolute;
@@ -125,3 +129,417 @@ a:hover{
 .non-opacity i{
 	color: #7db341;	
 }
+#chatContainer{
+    position: absolute;
+    right: 38px;
+    top: 60px;
+    width : 350px;
+    min-height: 70px;
+    background: white;
+    border: 5px solid gainsboro;
+    border-radius : 15px;
+    box-shadow: 0 10px 15px 1px gray;
+    font-family: 'Nanum Gothic', sans-serif;	
+    display: none;
+}
+
+.fa-caret-up{
+    position: absolute;
+    top: 39px;
+    left: 11px;
+    display: none;
+}
+#memberSearchForChat{
+    display : flex;
+    justify-content: center;
+    align-content: center;
+}
+input[name='member']{
+    color: rgb(81,81,81);
+    margin: 10px;
+    width: 90%;
+    font-size: 18px;
+    height : 40px;
+    border-radius: 10px;
+    border : 1px solid gainsboro;
+    padding-left : 10px;
+}
+input[name='member']:focus{
+    outline: none; 
+    border : 1px solid #7db;
+    box-shadow: 0 0 7px 1px #7db;
+}
+.chatProfile {
+    padding: 10px;
+    border : 1px solid gainsboro;
+    height: 65px;
+    display : grid;
+    grid-template-columns: 20% 80%;
+    transition: .4s;
+    background: white;
+}
+.chatProfile > img{
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+}
+.chatProfile > p{
+    color: rgb(81,81,81);
+    padding-left : 15px;
+    font-size : 20px;
+    font-weight: lighter;
+}
+.chatProfile:hover{
+    transform: scale(1.2);
+    box-shadow: 0 0 7px 1px #7db;
+}
+.chatProfile > p > b{
+    font-size : 15px;
+    background-size: contain;
+}
+#hightlight1{
+    background: url(images/h1.png);
+}
+#hightlight2{
+    background: url(images/h2.png);
+}
+#hightlight3{
+    background: url(images/h3.png);
+}
+.sendMsgTime{
+    position: absolute;
+    right: 10px;
+}
+#closeChatContainer{
+    width: 100%;
+    height: 20px;
+    background: tomato;
+    border-radius: 0 0 15px 15px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    transition: .2s;
+}
+.fa-chevron-up{
+    transition: .2s;
+}
+#closeChatContainer:hover{
+    background: #7db341;
+    height: 25px;
+}
+#closeChatContainer:hover > i{
+    transform: scale(1.5);
+    
+}
+
+
+/*-------------------------------------*/
+
+.chatbox-holder {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    align-items: flex-end;
+    height: 0;
+  }
+  
+  .chatbox {
+    width: 400px;
+    height: 400px;
+    margin: 0 20px 0 0;
+    position: relative;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .2);
+    display: flex;
+    flex-flow: column;
+    border-radius: 10px 10px 0 0;
+    background: white;
+    bottom: 0;
+    transition: .1s ease-out;
+  }
+  
+  .chatbox-top {
+    position: relative;
+    display: flex;
+    padding: 10px 0;
+    border-radius: 10px 10px 0 0;
+    background: rgba(0, 0, 0, .05);
+  }
+  
+  .chatbox-icons {
+    padding: 0 10px 0 0;
+    display: flex;
+    position: relative;
+  }
+  
+  .chatbox-icons .fa {
+    background: rgba(220, 0, 0, .6);
+    padding: 3px 5px;
+    margin: 0 0 0 3px;
+    color: white;
+    border-radius: 0 5px 0 5px;
+    transition: 0.3s;
+  }
+  
+  .chatbox-icons .fa:hover {
+    border-radius: 5px 0 5px 0;
+    background: rgba(220, 0, 0, 1);
+  }
+  
+  .chatbox-icons a, .chatbox-icons a:link, .chatbox-icons a:visited {
+    color: white;
+  }
+  
+  .chat-partner-name, .chat-group-name {
+    flex: 1;
+    padding: 0 0 0 95px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #30649c;
+    text-shadow: 1px 1px 0 white;
+    transition: .1s ease-out;
+  }
+  
+  .status {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    display: inline-block;
+    box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    background: #cacaca;
+    margin: 0 3px 0 0;
+  }
+  
+  .online {
+    background: #b7fb00;
+  }
+  
+  .away {
+    background: #ffae00;
+  }
+  
+  .donot-disturb {
+    background: #ff4343;
+  }
+  
+  .chatbox-avatar {
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 50%;
+    background: white;
+    padding: 3px;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .2);
+    position: absolute;
+    transition: .1s ease-out;
+    bottom: 0;
+    left: 6px;
+  }
+  
+  .chatbox-avatar img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+  
+  .chat-messages {
+    border-top: 1px solid rgba(0, 0, 0, .05);
+    padding: 10px;
+    overflow: auto;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: flex-start;
+    flex: 1;
+  }
+  
+  .message-box-holder {
+    width: 100%;
+    margin: 0 0 15px;
+    display: flex;
+    flex-flow: column;
+    align-items: flex-end;
+  }
+  
+  .message-sender {
+    font-size: 12px;
+    margin: 0 0 15px;
+    color: #30649c;
+    align-self: flex-start;
+  }
+  
+  .message-sender a, .message-sender a:link, .message-sender a:visited, .chat-partner-name a, .chat-partner-name a:link, .chat-partner-name a:visited {
+    color: #30649c;
+    text-decoration: none;
+  }
+  
+  .message-box {
+    padding: 6px 10px;
+    border-radius: 6px 0 6px 0;
+    position: relative;
+    background: rgba(100, 170, 0, .1);
+    border: 2px solid rgba(100, 170, 0, .1);
+    color: #6c6c6c;
+    font-size: 12px;
+  }
+  
+  .message-box:after {
+    content: "";
+    position: absolute;
+    border: 10px solid transparent;
+    border-top: 10px solid rgba(100, 170, 0, .2);
+    border-right: none;
+    bottom: -22px;
+    right: 10px;
+  }
+  
+  .message-partner {
+    background: rgba(0, 114, 135, .1);
+    border: 2px solid rgba(0, 114, 135, .1);
+    align-self: flex-start;
+  }
+  
+  .message-partner:after {
+    right: auto;
+    bottom: auto;
+    top: -22px;
+    left: 9px;
+    border: 10px solid transparent;
+    border-bottom: 10px solid rgba(0, 114, 135, .2);
+    border-left: none;
+  }
+  
+  .chat-input-holder {
+    display: flex;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+  }
+  .chat-input-holder img{
+    width: 30px; height: 50px;
+    position: relative;
+    left: -310px;
+  }
+  .chat-input {
+    resize: none;
+    padding: 5px 10px;
+    height: 40px;
+    font-family: 'Lato', sans-serif;
+     font-size: 14px;
+    color: #999999;
+    flex: 1;
+    border: none;
+    background: rgba(0, 0, 0, .05);
+     border-bottom: 1px solid rgba(0, 0, 0, .05);
+  }
+  
+  .chat-input:focus, .message-send:focus {
+    outline: none;
+  }
+  
+  .message-send::-moz-focus-inner {
+     border:0;
+     padding:0;
+  }
+  
+  .message-send {
+    -webkit-appearance: none;
+    background: #9cc900;
+    background: -moz-linear-gradient(180deg, #00d8ff, #00b5d6);
+    background: -webkit-linear-gradient(180deg, #00d8ff, #00b5d6);
+    background: -o-linear-gradient(180deg, #00d8ff, #00b5d6);
+    background: -ms-linear-gradient(180deg, #00d8ff, #00b5d6);
+    background: linear-gradient(180deg, #00d8ff, #00b5d6);
+    color: white;
+    font-size: 12px;
+    padding: 0 15px;
+    border: none;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+  }
+  
+  .attachment-panel {
+    padding: 3px 10px;
+    text-align: right;
+  }
+  
+  .attachment-panel a, .attachment-panel a:link, .attachment-panel a:visited {
+    margin: 0 0 0 7px;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .chatbox-min {
+    margin-bottom: -362px;
+  /*   height: 46px; */
+  }
+  
+  .chatbox-min .chatbox-avatar {
+    width: 60px;
+    height: 60px;
+  }
+  
+  .chatbox-min .chat-partner-name, .chatbox-min .chat-group-name {
+    padding: 0 0 0 75px;
+  }
+  
+  .settings-popup {
+    background: white;
+     border-radius: 20px/10px;
+     box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .2);
+    font-size: 13px;
+     opacity: 0;
+     padding: 10px 0;
+     position: absolute;
+     right: 0;
+     text-align: left;
+     top: 33px;
+     transition: .15s;
+     transform: scale(1, 0);
+     transform-origin: 50% 0;
+     width: 120px;
+    z-index: 2;
+    border-top: 1px solid rgba(0, 0, 0, .2);
+    border-bottom: 2px solid rgba(0, 0, 0, .3);
+  }
+  
+  .settings-popup:after, .settings-popup:before {
+    border: 7px solid transparent;
+     border-bottom: 7px solid white;
+     border-top: none;   
+     content: "";
+     position: absolute;
+     left: 45px;
+     top: -10px;
+    border-top: 3px solid rgba(0, 0, 0, .2);
+  }
+  
+  .settings-popup:before {
+    border-bottom: 7px solid rgba(0, 0, 0, .25);
+    top: -11px;
+  }
+  
+  .settings-popup:after {
+    border-top-color: transparent;
+  }
+  
+  #chkSettings {
+     display: none;
+  }
+  
+  #chkSettings:checked + .settings-popup {
+     opacity: 1;
+     transform: scale(1, 1);
+  }
+  
+  .settings-popup ul li a, .settings-popup ul li a:link, .settings-popup ul li a:visited {
+    color: #999;
+    text-decoration: none;
+    display: block;
+    padding: 5px 10px;
+  }
+  
+  .settings-popup ul li a:hover {
+    background: rgba(0, 0, 0, .05);
+  }
+
+  #login{
+      position: absolute;
+      top: 500px;
+  }
