레시피 카테고리 추가

--- a/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipeCaDetail.css
@@ -1,47 +1,128 @@
 @charset "UTF-8";
 
+html, body {
+    position: relative;
+    height: 100%;
+  }
 body {
-    color: rgb(81,81,81);
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color:#000;
+  margin: 0;
+  padding: 0;
 }
+#main-body{
+  width: 1300px;
+  margin: 0 auto;
+  height: 2000px;
+}
+.boundary{
+    background: url(../../images/wood.png);
+    box-shadow: 0px 10px 15px 2px white;
+    height:100px;
+}
+#sector3{
+    width: 1300px;
+    background:url(../../images/marble.jpg) no-repeat;
+    background-size: cover;
+    height: 1400px;
+    display: grid;
+    grid-template-rows: 60% 40%;
+}
+#sector3-body{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows:50% 50%;
+}
+#sector3-body>div{
+    margin: 5px;
+    box-shadow: 1px 1px 10px 1px black;
+}
+#sector3-body>div:nth-child(n){
+    background:url(../../images/note4.png) no-repeat;
+    background-size: cover;
+}
+#sector3-body>div:nth-child(2n){
+    background:url(../../images/note3.jpg) no-repeat;
+    background-size: cover;
+}
+#sector3-body>div:nth-child(3n){
+    background:url(../../images/note1.png) no-repeat;
+    background-size: cover;
+}
+#sector3-body>div:nth-child(4n){
+    background:url(../../images/note2.png) no-repeat;
+    background-size: cover;
+}
+
+.profile-container{
+    display: grid;
+    grid-template-rows: 25% 60% 15%;
+    font-family: 'East Sea Dokdo', cursive;
+    font-weight: lighter;
+    font-size : 30px;
+}
+.profile-pic-box{
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+.profile-picture{
+    width: 70px;
+    height: 70px;
+    border-radius: 40px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.profile-name{
+    font-size : 20px;
+}
+.profile-name p{
+	margin-top: 20px;
+	margin-left : 25px;
+}
+.recipe-pic-box img{ 
+    width: 96%;
+    height:200px;
+    overflow:hidden; 
+    margin-top: 15px;
+    margin-left: 5px;
+    
+}
+.recipe-info{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 12px;
+    font-weight: lighter;
+}
+.recipe-info i{
+    padding-right: 10px;
+}
+
 a {
     text-decoration: none;
     color: rgb(81,81,81);            
 }
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    margin-top : 80px;
-    height : auto;
-}
-
-hr {
-    border : 1px solid gainsboro;
-}
-.searchRecipe {
-    height: 200px;            
-}
-.searchbox {
+#searchbox {
+	margin-top : 100px;
+	width: 1300px;
+	height: 80px;
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
 }
-#cate {
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 60px;
-}
 #search-input {
     border-radius: 5px; 
-    width: 600px; height: 50px;
+    width: 500px; height: 50px;
     font-size: 30px;
     text-align: center;
     padding-right: 55px;
 }
 .searchicon {
-    width: 40px; height: 40px;
-    position:relative;
-    left:-120px;
-    top:-5px;
-    z-index: 1;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    z-index: 1;   
+    left: -50px;
     font-size: 45px;
     color: #7db341;
 }
@@ -49,50 +130,43 @@ hr {
     outline: none;
     border: 2px solid #7db341;
 }
-.searchin{
-    text-align:center;
-}
-.searchresult {      
-    margin-top: 50px;      
-    width: 800px; height: 100px;
-    margin: 0 auto;           
-    border: 2px solid gainsboro;
-    border-radius: 5px;
-    display: grid;
-    grid-template-columns: 3fr 2fr;
+.searchresult {           
+    height: 200px; 
     font-size: 20px;
-    display:none;
+/*     display:none; */
 }        
-.check {
-    line-height: 50px;        
-}
-.select {
-    text-align: center;
-}
-.select > button {
-    margin-top: 15px;
-    width: 70px; height: 70px;
-    border: none;
-    border-radius: 50%;
-    background: #7db341;  
-    color:white;
+li {
+    list-style:none;             
+    font-size:15px;    
+    font-weight: bold;            
+    color :#515151;            
+}   
+.check {    
+    display: inline-block;
     cursor: pointer;
+}     
+.check img {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top: 7px;
 }
-.select > button:focus {
-    outline: none;
+.iconImg {
+    width: 40px; height: 30px;
+    text-align: center;        
+    margin-right: 7px;   
 }
-.ca-list {
-    margin-top: 50px;
-    display: grid;   
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 30px;   
-    grid-row-gap:100px;    
+#cautionresult, #eventresult, #difficultyresult, 
+#cooktimeresult, #kindcookresult {
+    display: none;
 }
-.ca-list img {
-    border-radius: 5px;
-    width: 280px; height: 300px;            
+#keyword-container{    
+    margin: 0 auto;    
+    font-size : 25px;
+    font-family: 'East Sea Dokdo', cursive;
+    margin-bottom : 30px;
 }
-.ca-list .mem-profile {
-    width: 80px; height: 80px;
-    border-radius: 200px;
+.keyword-wrapper{
+	display : inline-block;
+    margin: 20px 0 20px 0;
 }
