--- a/babmukja/src/main/webapp/resources/css/recipe/recipewriteform.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipewriteform.css
@@ -72,6 +72,7 @@ button:hover{
 }
 
 #title{
+	margin-top : 50px;
     width: 649px;
     height: 50px;
     border-radius : 5px;
@@ -82,4 +83,52 @@ button:hover{
     margin-left :274px;
     outline: #7db341;
     text-align: center;
+}
+
+.videoPlus {
+	margin: 0 auto;
+    width: 649px;
+    height: 50px;
+    border: 1px dotted gray;
+    color: gray;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;    
+}
+.videoPlus span {
+    color: #7db341;
+    animation: glitter 2s linear 0s infinite;
+}
+@keyframes glitter{
+	0%{opacity: 0.4;}
+	50%{opacity: 1;}
+	100%{opacity: 0.4;}
+}
+#my-video[poster]{
+    object-fit: cover;
+}
+#my-video {
+	margin : 0 auto;	
+	margin-botton : 10px;
+}
+.fileContainer {
+    overflow: hidden;
+    position: relative;
+}
+
+.fileContainer [type=file] {
+    cursor: inherit;
+    display: block;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
 }
