--- a/babmukja/src/main/webapp/resources/css/member/searchpass.css
+++ b/babmukja/src/main/webapp/resources/css/member/searchpass.css
@@ -1,106 +1,102 @@
 @charset "UTF-8";
 .search_pass_container {
-	width: 1200px;
-	margin: 0 auto;
-	margin-top: 100px;
-	width: 30%;
+  width: 1200px;
+  margin: 0 auto;
+  margin-top: 100px;
+  width: 30%;
 }
-
 .search_pass_title {
-	text-align: center;
-	font-size: 30px;
-	font-weight: bold;
-	margin-bottom: 30px;
-	font-family: "Jua", sans-serif;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  font-family: "Jua", sans-serif;
 }
-
-.search_pass_input {
-	text-align: center;
-}
-
 .search_pass_search {
-	font-size: 20px;
-	font-weight: bold;
-	margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
-
 .search_pass_input input {
-	margin-bottom: 20px;
-	padding: 10px;
-	box-sizing: border-box;
-	width: 230px;
-	height: 45px;
-	outline: none;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	border-radius: 5px;
-	margin-bottom: 8px;
-	margin-right: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 230px;
+  height: 45px;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
 }
-
 .search_pass_input input:focus {
-	border-color: #7db341;
-	transition: border-color 0.5s ease-in-out;
+  border-color: #7db341;
+  transition: border-color 0.5s ease-in-out;
 }
-
 .search_pass_input button {
-	margin-left: 16px;
-	border: none;
-	background: none;
-	background-color: #7db341;
-	color: white;
-	border-radius: 3px;
-	width: 120px;
-	height: 38px;
-	font-weight: bold;
-	font-size: 16px;
+  margin-left: 16px;
+  border: none;
+  background: none;
+  background-color: #7db341;
+  color: white;
+  border-radius: 3px;
+  width: 120px;
+  height: 38px;
+  font-weight: bold;
+  font-size: 16px;
 }
-
 .search_pass_input button:hover {
-	background-color: #749e45;
+  background-color: #749e45;
 }
-
-.search_pass_button {
-	text-align: center;
-}
-
 .search_pass_button button {
-	margin-top: 20px;
-	width: 300px;
-	height: 50px;
-	border: none;
-	line-height: 45px;
-	background-color: #7db341;
-	margin-bottom: 40px;
-	color: white;
-	font-weight: bold;
-	border-radius: 5px;
-	font-size: 17px
+  margin-top: 20px;
+  width: 300px;
+  height: 50px;
+  border: none;
+  line-height: 45px;
+  background-color: #7db341;
+  margin-bottom: 40px;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  font-size: 17px;
 }
-
+.search_pass_button_one button {
+  margin-top: 20px;
+  width: 300px;
+  height: 50px;
+  border: none;
+  line-height: 45px;
+  background-color: #7db341;
+  margin-bottom: 40px;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  font-size: 17px;
+}
 .search_pass_button button:hover {
-	background-color: #749e45;
+  background-color: #749e45;
 }
 
 .email_check span {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .certification_check span {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .phone_check span {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .email_check {
-	margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .search_pass_input {
-	display: none;
+  display: none;
 }
 
 .visiable {
-	display: block;
+  display: block;
 }
