--- a/babmukja/src/main/webapp/resources/css/meetup/meetup-detail.css
+++ b/babmukja/src/main/webapp/resources/css/meetup/meetup-detail.css
@@ -272,4 +272,28 @@
  */
  
 
- 
+ /* 가입신청 바 */
+ .requestPermissionContainer{
+ 	margin:0 auto;
+ 	font-size:18px;
+ 	text-align:center;
+ 	margin-bottom:15px;
+ }
+ .requestPermission {
+
+    display: block;
+    border: 1px solid gainsboro;
+    width: 140px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+    margin:0 auto;
+    margin-bottom:10px;
+    font-size:18px;
+    margin-top:20px;
+}
+
+.requestPermission:hover {
+    background-color: #7db341;
+    color: white;
+}
