--- a/babmukja/src/main/webapp/resources/css/member/mypage.css
+++ b/babmukja/src/main/webapp/resources/css/member/mypage.css
@@ -45,3 +45,8 @@ canvas { width: 100%; height: 100% }
     80%{background-color: rgba(0,0,0,0.3);}
     100%{background-color: rgba(0,0,0,0.2);}
 }
+.modal-content{
+    background : url(/babmukja/resources/images/recipelistboard.jpg);
+    background-size: cover;
+    border-radius : 0;
+}
