--- a/babmukja/src/main/webapp/resources/css/store/mainpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/mainpb.css
@@ -6,13 +6,12 @@
 }
 
 #pb_store_today_product_text {
-  font-size: 20px;
   font-weight: bold;
   margin-top: 100px;
   margin-left: 20px;
   /* background-color: #7db341;  */
   color: #7db341;
-  font-size: 30px;
+  font-size: 35px;
   /* color: white; */
   border-bottom: 3px solid gainsboro;
   
@@ -39,14 +38,13 @@
 }
 
 #pb_sotre_popular_keyword_text {
-  font-size: 20px;
   font-weight: bold;
   margin-top: 100px;
   margin-left: 20px;
   /* background-color: #7db341;  */
   color: black;
   /*  color: white;  */
-  font-size: 30px;
+  font-size: 35px;
   
   text-align: center;
 }
@@ -138,21 +136,34 @@
   margin: 0 auto;
   margin-top: -350px;
   text-align: center;
+  overflow: hidden;
 }
 
 .pb_store_popular_product_img > img{
   width: 100%;
   height: 100%;
   border-radius: 5px;
+    -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+.pb_store_popular_product_img > img:hover{
+  -webkit-transform: scale(1.08);
+  transform: scale(1.08);
 }
 
 a:link {
   text-decoration: none;
 }
 
+a:visited {
+  text-decoration: none;
+}
+
 
 #pb_store_popular_product_text {
   line-height: 300px;
+  font-size: 35px;
 }
 
 .pb_store_popular_product_title {
@@ -179,10 +190,6 @@ margin-top: -10px;
     font-size: 20px;
 }
 
-#pb_store_popular_product_imges {
-/*     width: 1000px; */
-}
-
 #pb_store_popular_product_img > #pb_store_popular_product_imges > #pb_store_popular_product_imges_grid{
     display: grid;
 /*     width: 1000px; */
@@ -195,6 +202,10 @@ margin-top: -10px;
     grid-gap: 2em;
     position: relative;
     
+}
+
+.pb_store_popular_product_img {
+	color: black;
 }
 
 #pb_store_popular_product_img > #pb_store_popular_product_imges > #pb_store_popular_product_imges_grid > a > img{
@@ -274,3 +285,15 @@ hr {
     margin: 0;
     padding: 0;
   } 
+  
+.pb_store_more_product {
+	margin-left: 1170px;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
+}
+
+.pb_store_more_product:hover {
+	color: rgb(81, 81, 81);
+}
