레시피 등록, 수정 기능 수정 , 레시피 메인 기능 추가, 좋아요 기능 수정

--- a/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
+++ b/babmukja/src/main/webapp/resources/css/recipe/recipe-detail.css
@@ -264,6 +264,13 @@
 .post-content{
     color:rgb(81,81,81);
 }
+#a-button {	
+	text-align : right;
+}
+#a-button > a {
+	color:rgb(81,81,81);
+}
+	
 #reviewStars-input input:checked ~ label, #reviewStars-input label, 
 #reviewStars-input label:hover, #reviewStars-input label:hover ~ label,
 #reviewStarsinput input:checked ~ label, #reviewStarsinput label, 
