--- a/babmukja/src/main/webapp/resources/css/store/detailpb.css
+++ b/babmukja/src/main/webapp/resources/css/store/detailpb.css
@@ -272,37 +272,29 @@
 .pb_review_profile {
     display: grid;
     grid-template-columns: 10% 90%;
-    margin-top: 50px;
+    margin-top: 15px;
 }
 
 .pb_review_profile_img img {
-    width: 60px;
-    height: 60px;
-    border-radius: 30px;
-    margin-top: -20px;
+    width: 110px;
+    height: 110px;
+    border-radius: 55px;
 }
 
 .pb_review_user_info {
-    margin-top: -15px;
-    margin-left: -15px;
-    display: flex;
+	display :grid;
+	grid-template-rows : 50% 50%;
 }
 
-.pb_review_user_info > .review_user_rating {
-    color: #7db341;
-    margin-top: 40px;
-    margin-left: -150px;
-}
-
-.pb_review_user_info > .review_user_rating span {
-    margin-left: 15px;
-    color: rgb(81,81,81);
-}
 
 .review_user_nickname {
     font-weight: bold;
+    font-size: 20px;
+    float: left;
 }
-
+.reviewBUTTON{
+	margin-left : 15px;
+}
 .pb_review_select {
 	height: auto;
 	border-bottom: 1px solid gainsboro;
@@ -796,11 +788,7 @@
   .reviewUpdateBTN:hover {
   	color: #7db341;
   }
-  
-  .reviewBUTTON {
-  	margin-left: 20px;
-  }
-  
+ 
   .reviewDeleteBTN {
   	  	border: none;
   	color: black;
@@ -947,4 +935,50 @@
     width: 500px;
     height: 300px;
 }
+.check-stars{
+    box-sizing: border-box;
+    margin : 0 auto;
+    display: grid;
+    grid-template-columns: 100%;
+    width:300px;
+}
+.check-backStar{
+    background: url(/babmukja/resources/images/star5-gray-big.png);
+    width: 100%;
+    height: 59px;
+}
 
+.check-frontStar-wrapper{
+    width: 120px;
+    position: absolute;
+}
+.check-frontStar{
+    background: url(/babmukja/resources/images/star5-big.png) no-repeat;
+    width : 0px;
+    height: 59px;
+}
+
+.stars{
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 100%;
+    width:120px;
+    margin-bottom: 15px;
+}
+.backStar{
+    background: url(/babmukja/resources/images/star5-gray.png);
+    width : 100%;
+    height: 23px;
+}
+.frontStar-wrapper{
+    width: 120px;
+    position: absolute;
+}
+.frontStar{
+    background: url(/babmukja/resources/images/star5.png) no-repeat;
+    height: 23px;
+}
+.user_info_sec1{
+	display:grid;
+	grid-template-columns : 90% 10%;
+}
